NEW 252863
REGRESSION (260209@main?): [iOS/macOS] TestWebKitAPI.ProcessSwap.PageOverlayLayerPersistence is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=252863
Summary REGRESSION (260209@main?): [iOS/macOS] TestWebKitAPI.ProcessSwap.PageOverlayL...
Bri Harris
Reported 2023-02-23 14:44:26 PST
TestWebKitAPI.ProcessSwap.PageOverlayLayerPersistence is a flaky timeout on iOS 16 and on Ventura Debug. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ProcessSwap.PageOverlayLayerPersistence
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-01 12:00:29 PST
Bri Harris
Comment 2 2023-04-19 17:07:36 PDT
EWS
Comment 3 2023-04-21 09:55:50 PDT
Test gardening commit 263246@main (28e3f3ddf8ef): <https://commits.webkit.org/263246@main> Reviewed commits have been landed. Closing PR #12948 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.